--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <title>Belb</title>
+    <title>RateMyFood</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
